--- a/src/styles/game.css
+++ b/src/styles/game.css
@@ -141,7 +141,7 @@ a {
     width: 58rem;
     height: 50rem;
     flex-shrink: 0;
-    background-image: url(../images/sand.png);
+    background-image: url(../images/Sand.png);
     background-repeat: no-repeat;
     background-size: cover;
 
